<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view_model"
            type="com.katoh.campusschedule.viewmodels.CustomResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/time_table_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_weight="0.25" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/monday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tuesday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/wednesday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/thursday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/friday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/text_sat"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/saturday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:visibility="visible" />

            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_width_normal"
                android:background="@color/colorPrimaryDark" />

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
