<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_long"
        android:layout_marginTop="@dimen/spacing_long"
        android:text="@string/type"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_type"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_shorter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_type"
        tools:itemCount="5"
        tools:listitem="@layout/row_type_list" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_shorter"
        android:layout_marginEnd="@dimen/spacing_long"
        android:text="@string/add"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_type"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_setting_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_long"
        android:text="@string/setting_sat"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/text_type"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Switch
        android:id="@+id/switch_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_long"
        app:layout_constraintBottom_toBottomOf="@+id/text_setting_sat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_setting_sat" />

    <TextView
        android:id="@+id/text_setting_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_long"
        android:text="@string/setting_order"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/text_type"
        app:layout_constraintTop_toBottomOf="@+id/text_setting_sat" />

    <TextView
        android:id="@+id/text_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/until"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@+id/text_setting_order"
        app:layout_constraintStart_toEndOf="@+id/text_setting_order" />

    <Spinner
        android:id="@+id/spinner_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dropDownWidth="match_parent"
        android:entries="@array/labels_time_order"
        app:layout_constraintBottom_toBottomOf="@+id/text_setting_order"
        app:layout_constraintEnd_toEndOf="@+id/switch_sat"
        app:layout_constraintTop_toTopOf="@+id/text_setting_order"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>